@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-14T00:35:57Z",
-  "count_outdated" : 1280,
-  "uniques_outdated" : 357,
-  "count" : 1324,
-  "uniques" : 368,
+  "timestamp" : "2024-09-15T00:41:19Z",
+  "count_outdated" : 1282,
+  "uniques_outdated" : 358,
+  "count" : 1326,
+  "uniques" : 369,
   "views" : [
-    {
-      "timestamp": "2024-08-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-03T00:00:00Z",
       "count": 6,
@@ -79,6 +70,15 @@
     },
     {
       "timestamp": "2024-09-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-14T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
