@@ -3,11 +3,6 @@
   "uniques": 11,
   "views": [
     {
-      "timestamp": "2024-08-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-09-03T00:00:00Z",
       "count": 6,
       "uniques": 2
@@ -44,6 +39,11 @@
     },
     {
       "timestamp": "2024-09-13T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-14T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
