@@ -1,3 +1,12 @@
+2024-09-15T00:41:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866730924 # 419
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
+* notice: last 14d: unq all: 11 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 357 1280 / 368 1324
+* notice: next accum: outdated-unq outdated-all / unq all: 358 1282 / 369 1326
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2024-08-31] / [2024-09-14]
+
 2024-09-14T00:35:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10857961618 # 418
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-14
